# electionguard-python

./: Makefile  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: pull_request.yml  release.yml
docs/: 0_Configure_Election.ipynb  1_Key_Ceremony.md  4_Decrypt_Tally.md  Build_and_Run.md  Project_Workflow.md  Tablet Setup.md  index.md
src/electionguard/: __init__.py
src/electionguard_db/: docker-compose.db.yml
src/electionguard_gui/: Dockerfile  docker-compose.yml  main_app.py
src/electionguard_gui/services/: configuration_service.py
src/electionguard_gui/services/key_ceremony_stages/: key_ceremony_s1_join_service.py
tests/property/: test_encrypt.py
